5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1791_1601.log
== TEST (2019-05-29 14:09:03) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = 0
while(i < size(t)):
	i = i + 1
print(min(t[i]))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:10:20) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = 0
while(i < size(t)):
	i = i + 1
m = min(t[i])
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:10:21) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = 0
while(i < size(t)):
	i = i + 1
m = min(t[i])
print(m)


-- EXECUTION TIME:
0.491287
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1601/main.py", line 6, in <module>
    m = min(t[i])
IndexError: index 4 is out of bounds for axis 0 with size 4

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:10:21) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = 0
while(i < size(t)):
	i = i + 1
m = min(t[i])
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:11:30) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = 0
a = []
while(i < size(t)):
	i = i + 1
	a.append(t[i])
b = min(a)
print(b)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:19) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = 0
a = []
while (i < t):
	i = i + 1
	print(min(t))
print(i)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:17:22) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = 0
a = []
while (i < size(t)):
	i = i + 1
	print(min(t))
print(i)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:18:15) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = 0
a = []
while (i < size(t)):
	i = i + 1
a = min(t[i])	
print(a)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:18:42) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = 0
a = []
while (i < size(t)):
	i = i + 1
	a = min(t[i])	
print(a)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:21:14) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = 0
a = []
while (i < size(t)):
	if (i) == min(t):
		print(i)
	i = i + 1
		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:21:32) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = 0
a = []
while (i < size(t)):
	if (i) == min(t):
		print(i)
	i = i + 1
print(i)

		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:23:02) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = 0
a = []
while (i < size(t)):
	i = i + 1
	if (i) == min(t):
		print(i)
	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:33:13) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
a = arange(t)
print(min(t))

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:33:30) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))

print(min(t))

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:37:41) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
p = 0
while (p < t):
	if (t[p] > min(t)):
		a = i + 1
	i = i + 1
print(i)


	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:02) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
p = 0
while (p < size(t)):
	if (t[p] > min(t)):
		a = i + 1
	i = i + 1
print(i)


	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:25) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
p = 0
while (p < size(t)):
	if (t[p] > min(t)):
		a = p + 1
	p = p + 1
print(i)


	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:38:38) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
p = 0
while (p < size(t)):
	if (t[p] > min(t)):
		a = p + 1
	p = p + 1
print(p)


	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:39:35) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
p = -1
while (p < size(t)):
	if (t[p] > min(t)):
		a = p + 1
	p = p + 1
print(p)


	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:00) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
p = -1

while (p < size(t)):
	if (t[p] == min(t)):
		a = p + 1
	p = p + 1
print(p)


	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:33) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = arange(t)

while (p < size(t)):
	if (t[p] == min(t)):
	
	

	   
	


		
	





-- ERROR:
File "XXXX", line 20
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:42:42) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = arange(t)

print(i)
	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:43:04) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = arange[t]

print(i)
	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:43:30) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = arange(t)

print(i)
	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:44:10) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
arange(t)

print(i)
	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:44:17) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
arange(t)
i = t
print(i)
	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:44:30) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
arange.(t)
i = t
print(i)
	
	

	   
	


		
	





-- ERROR:
File "XXXX", line 3
    arange.(t)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:44:39) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = arange.(t)

print(i)
	
	

	   
	


		
	





-- ERROR:
File "XXXX", line 3
    i = arange.(t)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:44:51) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = arange.(t)
print(i)
	
	

	   
	


		
	





-- ERROR:
File "XXXX", line 3
    i = arange.(t)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:50:45) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = 0
while (i < size(t)):
	i = min(t)
	i = i + 1
print(i)	
	
	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:53:48) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = arange(t)

	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:54:13) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = [arange(t)]
print(i)

	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:54:27) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = arange(t)
print(i)

	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:35) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
a = arrange(t)

	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:43) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
a = arrange(t)
print(a)

	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:09:39) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))

print(min(t))

	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:10:11) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
p = arrange.(t)


	
	

	   
	


		
	





-- ERROR:
File "XXXX", line 3
    p = arrange.(t)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:10:56) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
arange(t)
print(t)


	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:12:20) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
a = []
a.arange(t)
print(a)


	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:16:49) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = 0
while (i < size(t)):
	if(t[i] != min(t)):
		i = i + 1
	i = i + 1
print(t[i])
		 

	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:17:37) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = 0
while (i < size(t)):
	if(t[i] != min(t)):
		i = i + 1
	i = i + 1
print(i)
		 

	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:18:02) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = -1
while (i < size(t)):
	if(t[i] != min(t)):
		i = i + 1
	i = i + 1
print(i)
		 

	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:19:40) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = 0
while (i < size(t)):
	if(t[i] != min(t)):
		size[i] != size[t]
	i = i + 1
print(size[i])


	
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:20:38) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = t(arange)
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:20:45) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = t(arange)
print(i)
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:20:58) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = t(arange)
print(i)
	

	   
	


		
	





-- EXECUTION TIME:
0.605428
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1791/1601/main.py", line 3, in <module>
    i = t(arange)
TypeError: 'numpy.ndarray' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:20:59) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = t(arange)
print(i)
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:22:08) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = arange(t, dtype =int)
print(i)
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:22:18) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = arange(t, dtype)
print(i)
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:22:35) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
i = arange(t, )
print(i)
	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:32:18) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
a = []
i = 0
while (i < size(t) and (t[i] > min(t)):
		 i = i + 1
print(i)
	
	
	

	

	   
	


		
	





-- ERROR:
File "XXXX", line 5
    while (i < size(t) and (t[i] > min(t)):
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:32:49) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
a = []
i = 0
while (i < size(t))and (t[i] > min(t)):
		 i = i + 1
print(i)
	
	
	

	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:33:13) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
a = []
i = 0
while (i < size(t))and (t[i] > min(t)):
		 i = i + 1
print(i)
	
	
	

	

	   
	


		
	





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:33:48) 
-- CODE:
from numpy import*
t = array(eval(input("tempo de chegada dos corredores: ")))
a = []
i = 0
while (i < size(t))and (t[i] > min(t)):
		 i = i + 1
print(i)
	
	
	

	

	   
	


		
	





-- EXECUTION TIME:
0.354668
-- TEST CASE 1:
---- input:
[11.32,40.2,32,10]
---- correct output:
3
---- user output:
3
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
